ingress.yaml
#Ingress de grafana necesario para acceder al servicio
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    prometheus.io/port: "10254"
    prometheus.io/scrape: "true"
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    prometheus.io/port: "10254"
    prometheus.io/scrape: "true"
spec:
  defaultBackend:
    service:
      name: loki
      port:
        number: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress-internal
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    prometheus.io/port: "10254"
    prometheus.io/scrape: "true"
spec:
  defaultBackend:
    service:
      name: loki
      port:
        number: 3100
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-resource-grafana
#   namespace: monitoring
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     prometheus.io/port: "10254"
#     prometheus.io/scrape: "true"
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: loki-grafana
#                 port:
#                   number: 80
